2006-09-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimppropwidgets.[ch]: added
	gimp_prop_toggle_button_new(), and re-implemented
	gimp_prop_check_button_new() in terms of it, as basically
	a convenience function now.
	
2006-09-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/paint-funcs/scale-funcs.[ch]:  commit patch from "gg"
	to fix Lanczos problems, addresses bug #167956 and 
	bug #355178.

2006-09-21  Sven Neumann  <sven@gimp.org>

	* README.i18n: mention po-python.

	* plug-ins/pygimp/plug-ins/py-slice.py
	* plug-ins/pygimp/plug-ins/shadow_bevel.py: prepared for translation.

2006-09-21  Sven Neumann  <sven@gimp.org>

	* menus/image-menu.xml.in: added align-tool (bug #356260).

	* plug-ins/pygimp/plug-ins/palette-to-gradient.py
	* plug-ins/pygimp/plug-ins/pdbbrowse.py: prepared for translation.

2006-09-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/palette-offset.py
	* plug-ins/pygimp/plug-ins/palette-sort.py: prepared for translation.

2006-09-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpui.override (_wrap_gimp_dialog_new)
	* plug-ins/pygimp/pygimp-drawable.c (drw_set_name): allow String
	or Unicode objects.

	* plug-ins/pygimp/plug-ins/colorxhtml.py
	* plug-ins/pygimp/plug-ins/foggify.py: prepared for translation.

2006-09-21  Sven Neumann  <sven@gimp.org>

	* plug-ins/gfig/gfig-dialog.c: pass correct parameters to
	gimp_brush_select_button_new(). Fixes bug #356901.

	* plug-ins/script-fu/scripts/test-sphere.scm: use 100.0 as the
	default opacity for SF-BRUSH.

2006-09-21  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager.c (read_pixel_data_1) (write_pixel_data_1):
	use the same code on all platforms. The optimization for bytes == 4
	was pointless anyway.

2006-09-21  Michael Natterer  <mitch@gimp.org>

	* app/base/tile-manager.c (read_pixel_data_1): fix build on
	big endian.

2006-09-21  Michael Natterer  <mitch@gimp.org>

	* plug-ins/uri/uri-backend-wget.c (uri_backend_load_image): use