@@ -1,5 +1,10 @@
 2006-09-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
+	* app/tools/gimpselectionoptions.[ch]: remove
+	rectangle-related options no longer used anywhere.
+	
+2006-09-21  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
+
 	* libgimpwidgets/gimppropwidgets.[ch]: added
 	gimp_prop_toggle_button_new(), and re-implemented
 	gimp_prop_check_button_new() in terms of it, as basically
